--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Will Hoppin</title>
+  <title>Will Hoppin | Portfolio</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
