--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta
+      property="og:image"
+      content="/assets/covers/main-cover.png"
+    />
   <title>Will Hoppin | Portfolio</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans" rel="stylesheet" />
